# bonk-burn-machine

./: .gitignore  Anchor.toml  README.md  package.json
programs/bonk-mint/: Cargo.toml
programs/bonk-mint/src/: lib.rs
scripts/: create_collection_nft.ts  get_mint_from_num.ts  get_mint_list.ts  package.json  sign_list1.txt  sign_nfts.sh  tsconfig.json  update_metadata.ts  update_nfts.sh  verify_collection.ts
setup/: README.md  create-collection.ts  update-burn.ts
tests/: bonk-mint.ts
web/: README.md  config-overrides.js  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.tsx
web/src/Components/: Top.tsx  Wallet.tsx
web/src/anchor/: bonk_mint.json  bonk_mint.ts
web/src/mint/: constants.ts  get_accounts.ts  mint.ts
