[package]
name = "bonk-mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonk_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
mpl-token-metadata = { version="1.6.4", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "~1.10"
anchor-spl = "~0.25.0"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
arrayvec = "0.7.2"
